--- a/Strings/en-us/Resources.resw
+++ b/Strings/en-us/Resources.resw
@@ -1,5 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -61,17 +120,17 @@
   <data name="AppDisplayName" xml:space="preserve">
     <value>Expense Tracker v1.0</value>
   </data>
-	<data name="AppDescription" xml:space="preserve">
-		<value>Expense Tracker v1.0</value>
-  	</data>
-  <data name="ShellMenuBarItem_File.Title" xml:space="preserve">
-    <value>File</value>
+  <data name="AppDescription" xml:space="preserve">
+    <value>Expense Tracker v1.0</value>
+  </data>
+  <data name="ShellMenuBarItem_Add.Title" xml:space="preserve">
+    <value>Add</value>
   </data>
   <data name="ShellMenuBarItem_Views.Title" xml:space="preserve">
     <value>Views</value>
   </data>
-  <data name="ShellMenuItem_File_Exit.Text" xml:space="preserve">
-    <value>Exit</value>
+  <data name="ShellMenuItem_Add_Transaction.Text" xml:space="preserve">
+    <value>Transaction</value>
   </data>
   <data name="ShellMenuItem_Views_Dashboard.Text" xml:space="preserve">
     <value>Dashboard</value>
@@ -81,10 +140,10 @@
     <comment>Page title for DashboardPage</comment>
   </data>
   <data name="ShellMenuItem_Views_ListView.Text" xml:space="preserve">
-    <value>ListView</value>
+    <value>List Views</value>
   </data>
   <data name="ListView_Title.Text" xml:space="preserve">
-    <value>ListView</value>
+    <value>List View</value>
     <comment>Page title for ListViewPage</comment>
   </data>
   <data name="ShellMenuItem_Views_Payables.Text" xml:space="preserve">
@@ -98,7 +157,7 @@
     <value>Sample</value>
   </data>
   <data name="Sample_Title.Text" xml:space="preserve">
-    <value>Sample</value>
+    <value>SAMPLE PAGE, UNDECIDED</value>
     <comment>Page title for SamplePage</comment>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
@@ -116,17 +175,14 @@
   <data name="Settings_Theme_Default.Content" xml:space="preserve">
     <value>Default</value>
   </data>
-  <data name="Settings_About.Text" xml:space="preserve">
-    <value>About this application</value>
-  </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
-    <value>TODO: Replace with your app description.</value>
+    <value>This application was developed to satisfy ICAE 3 of IT2143 (Visual Programming). Expense Tracker helps you easily track and divide expenses among a group of people, for a trip or event or any other need you may have!</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.Content" xml:space="preserve">
-    <value>Privacy Statement</value>
+    <value>Github - S.G.Seyone</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.NavigateUri" xml:space="preserve">
-    <value>https://YourPrivacyUrlGoesHere/</value>
+    <value>https://github.com/seyone22</value>
   </data>
   <data name="ShellMenuBarSettingsButton.[using:Microsoft.UI.Xaml.Automation]AutomationProperties.Name" xml:space="preserve">
     <value>Settings</value>
@@ -134,5 +190,18 @@
   <data name="Settings_Title.Text" xml:space="preserve">
     <value>Settings</value>
     <comment>Page title for SettingsPage</comment>
+  </data>
+  <data name="Settings_About.Text" xml:space="preserve">
+    <value>About this application</value>
+  </data>
+  <data name="ShellMenuItem_Add_Account.Text" xml:space="preserve">
+    <value>Account</value>
+  </data>
+  <data name="ShellMenuItem_Views_AddTransaction.Text" xml:space="preserve">
+    <value>AddTransaction</value>
+  </data>
+  <data name="AddTransaction_Title.Text" xml:space="preserve">
+    <value>AddTransaction</value>
+    <comment>Page title for AddTransactionPage</comment>
   </data>
 </root>
