--- a/Strings/en-us/Resources.resw
+++ b/Strings/en-us/Resources.resw
@@ -140,10 +140,10 @@
     <comment>Page title for DashboardPage</comment>
   </data>
   <data name="ShellMenuItem_Views_ListView.Text" xml:space="preserve">
-    <value>List Views</value>
+    <value>Transactions</value>
   </data>
   <data name="ListView_Title.Text" xml:space="preserve">
-    <value>List View</value>
+    <value>Transactions</value>
     <comment>Page title for ListViewPage</comment>
   </data>
   <data name="ShellMenuItem_Views_Payables.Text" xml:space="preserve">
@@ -154,10 +154,10 @@
     <comment>Page title for PayablesPage</comment>
   </data>
   <data name="ShellMenuItem_Views_Sample.Text" xml:space="preserve">
-    <value>Sample</value>
+    <value>Accounts</value>
   </data>
   <data name="Sample_Title.Text" xml:space="preserve">
-    <value>SAMPLE PAGE, UNDECIDED</value>
+    <value>Accounts</value>
     <comment>Page title for SamplePage</comment>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
@@ -199,9 +199,5 @@
   </data>
   <data name="ShellMenuItem_Views_AddTransaction.Text" xml:space="preserve">
     <value>AddTransaction</value>
-  </data>
-  <data name="AddTransaction_Title.Text" xml:space="preserve">
-    <value>AddTransaction</value>
-    <comment>Page title for AddTransactionPage</comment>
   </data>
 </root>
